--- a/ZipKifuBrowser/res/values/strings.xml
+++ b/ZipKifuBrowser/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="hello">Hello World, KifuBrowserActivity!</string>
     <string name="app_name">ZipKifuBrowser</string>
     <string name="ok_button_label">OK</string>
-    <string name="parse_start_label">Start</string>
-    <string name="list_summary_label">list</string>
-    <string name="recreate_table_label">recreate table</string>
+    <string name="parse_start_label">Parse zip start!</string>
+    <string name="list_summary_label">Kifu summary</string>
+    <string name="recreate_table_label">clean DB</string>
+    <string name="zip_parse_label">Parse zip</string>
+    <string name="menu_parse_zip">DB</string>
 
 </resources>
